# Kingfisher_Code

src/kingfisher_vision/: CMakeLists.txt  package.xml
src/kingfisher_vision/calib/: fisheyeShortCalib.ini  fisheyeShortCalib.yml
src/kingfisher_vision/launch/: bagfileVisionSystemShort.launch  calibrateLong.launch  calibrateShort.launch  pointgrey_camera_driver_default.launch  stream_flip.launch  visionSystem2.launch  visionSystemLong.launch  visionSystemShort.launch  visionSystemWebcam.launch
src/kingfisher_vision/src/: calib_results.txt  image_converter.cpp  kingfisher_vision_long.cpp  kingfisher_vision_short.cpp  kingfisher_vision_short_OLD.cpp  position_filter_long.cpp  position_filter_short.cpp  position_filter_short_OLD.cpp  relativePose.cpp  sort_test.cpp
src/sensor_fusion/: CMakeLists.txt  package.xml
src/sensor_fusion/launch/: state_estimation.launch
src/sensor_fusion/src/: imu_vision_bias_fusion.cpp  imu_vision_bias_fusion_note.txt  imu_vision_fusion.cpp  imu_vision_fusion_backup.cpp  imu_vision_fusion_bias.cpp  imu_vision_fusion_cppForm.cpp  imu_vision_fusion_reset_backup.cpp  oneDOF_dog_tracking.cpp  sensor_fusion.cpp  velocity_output.cpp  velocity_output_LPF.cpp
src/ssf_core/scripts/: plot_relevant
src/ssf_core/src/: SSF_Core.cpp
src/ssf_updates/: CMakeLists.txt  fisheye_sensor_fix.yaml
src/ssf_updates/launch/: fisheye_sensor.launch  imu_vision_record.launch  viconpos_sensor.launch  viconpose_sensor.launch
src/ssf_updates/src/: fisheye_measurements.h  fisheye_sensor.cpp  fisheye_sensor.h  flow_sensor.cpp  flow_sensor.h  main.cpp  viconpos_sensor.cpp  viconpos_sensor.h  viconpose_measurements.h  viconpose_sensor.cpp  viconpose_sensor.h
